[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "data-manager",
    "duckdb==1.4.3",
    "fastapi[standard]>=0.135.2",
    "polars>=1.39.3",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
data-manager = { git = "https://github.com/mwine81/data-manager.git" }
